--- a/src/style/Homepage.scss
+++ b/src/style/Homepage.scss
@@ -1,142 +1,151 @@
 @import "./Global";
 
 .homepage {
-    overflow: hidden;
-    position: relative;
-    height: calc(100vh - 61px);
+  overflow: hidden;
+  position: relative;
+  height: calc(100vh - 61px);
 
-    &__title {
-        &--responsive {
-            display: none;
-        }
+  &__title {
+    &--responsive {
+      display: none;
+    }
+  }
+
+  &__carroussel {
+    height: auto;
+    width: 80px;
+    position: absolute;
+    z-index: 2;
+    bottom: 23px;
+    left: 35px;
+  }
+
+  &__phone {
+    position: absolute;
+    z-index: 4;
+    bottom: 15px;
+    left: 135px;
+    font-size: 30px;
+    margin: 0;
+    color: $yellow;
+  }
+  &__informations {
+    position: absolute;
+    max-width: 40vw;
+    max-height: 40vh;
+    bottom: 10%;
+    left: 10%;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    z-index: 4;
+
+    p {
+      text-align: center;
+      color: $yellow;
+      font-size: 35px;
+      margin: 0;
+    }
+  }
+
+  &__image {
+    position: absolute;
+    &--bkg {
+      height: 100%;
+      width: 100%;
+      z-index: 1;
+    }
+    &--title {
+      transform: rotate(-4deg);
+      max-width: 70vw;
+      height: auto;
+      z-index: 3;
+      left: 5%;
+      top: 5%;
+    }
+
+    &--subtitle {
+      transform: rotate(-4deg);
+      max-width: 45vw;
+      height: auto;
+      z-index: 3;
+      top: 30%;
+      left: 10%;
+    }
+    &--cow {
+      max-height: 90vh;
+      width: auto;
+      z-index: 2;
+      bottom: 0;
+      right: 0;
+    }
+  }
+
+  @media (max-width: 900px) {
+    background-color: $red;
+
+    &__informations {
+      max-width: 100vw;
+      left: 5px;
+      right: 5px;
+      bottom: 25vh;
+      background: transparent;
+
+      p {
+        font-size: 25px;
+        margin: 0 5px;
+      }
     }
 
     &__phone {
-        position: absolute;
-        z-index: 4;
-        bottom: 15px;
-        left: 25px;
-        font-size: 30px;
-        margin: 0;
-        color: $yellow;
+      font-size: 20px;
+      margin: 0;
+      top: 0;
+      left: 0;
+      width: 100%;
+      text-align: center;
+      margin-top: 10px;
     }
-    &__informations {
-        position: absolute;
-        max-width: 40vw;
-        max-height: 40vh;
-        bottom: 10%;
-        left: 10%;
-        align-items: center;
+    &__title {
+      &--responsive {
         display: flex;
-        flex-direction: column;
-        justify-content: center;
-        z-index: 4;
-
-        p {
-            text-align: center;
-            color: $yellow;
-            font-size: 35px;
-            margin: 0;
-        }
+        font-size: 10vw;
+        transform: rotate(-4deg);
+        color: $yellow;
+        text-shadow: 5px 3px 5px #000000ad;
+        position: absolute;
+        height: auto;
+        left: 15px;
+        top: 7%;
+      }
     }
 
     &__image {
-        position: absolute;
-        &--bkg {
-            height: 100%;
-            width: 100%;
-            z-index: 1;
-        }
-        &--title {
-            transform: rotate(-4deg);
-            max-width: 70vw;
-            height: auto;
-            z-index: 3;
-            left: 5%;
-            top: 5%;
-        }
+      position: absolute;
+      &--bkg {
+        display: none;
+      }
+      &--cow {
+        display: flex;
+        max-width: 50vw;
+        height: auto;
+        bottom: 0;
+        right: 0;
+        z-index: 1;
+      }
 
-        &--subtitle {
-            transform: rotate(-4deg);
-            max-width: 45vw;
-            height: auto;
-            z-index: 3;
-            top: 30%;
-            left: 10%;
-        }
-        &--cow {
-            max-height: 90vh;
-            width: auto;
-            z-index: 2;
-            bottom: 0;
-            right: 0;
-        }
+      &--title {
+        display: none;
+      }
+
+      &--subtitle {
+        top: 20%;
+        right: 5%;
+        width: 60vw;
+        height: auto;
+        left: unset;
+      }
     }
-
-    @media (max-width: 900px) {
-        background-color: $red;
-
-        &__informations {
-            max-width: 100vw;
-            left: 5px;
-            right: 5px;
-            bottom: 25vh;
-            background: transparent;
-
-            p {
-                font-size: 25px;
-                margin: 0 5px;
-            }
-        }
-
-        &__phone {
-            font-size: 20px;
-            margin: 0;
-            top : 0;
-            left: 0;
-            width: 100%;
-            text-align: center;
-            margin-top: 10px;
-        }
-        &__title {
-            &--responsive {
-                display: flex;
-                font-size: 10vw;
-                transform: rotate(-4deg);
-                color: $yellow;
-                text-shadow: 5px 3px 5px #000000ad;
-                position: absolute;
-                height: auto;
-                left: 15px;
-                top: 7%;
-            }
-        }
-
-        &__image {
-            position: absolute;
-            &--bkg {
-                display: none;
-            }
-            &--cow {
-                display: flex;
-                max-width: 50vw;
-                height: auto;
-                bottom: 0;
-                right: 0;
-                z-index: 1;
-            }
-
-            &--title {
-                display: none;
-            }
-
-            &--subtitle {
-                top: 20%;
-                right: 5%;
-                width: 60vw;
-                height: auto;
-                left: unset;
-            }
-        }
-    }
+  }
 }
